configs/argocd/argo-rollouts-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts-dashboard-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Path(`/argo-rollouts`)
      services:
        - name: argocd-configs-argo-rollouts-dashboard
          port: 3100
