configs/argocd/argo-workflows-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows-server-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo-workflows.local`)
      services:
        - name: argocd-configs-argo-workflows-server
          port: 2746
