configs/argocd/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.local`)
      services:
        - name: my-argocd-server
          port: 443
          serversTransport: argocd-server-transport
    - kind: Rule
      match: Path(`/argo-rollouts`)
      services:
        - name: argocd-configs-argo-rollouts-dashboard
          port: 3100
